--- a/src/app/scss/PCBuilder2.css
+++ b/src/app/scss/PCBuilder2.css
@@ -91,7 +91,7 @@ label {
   margin: 0.5rem;
 }
 
-.platform-button.selected,
+/* .platform-button.selected, */
 .platform-button:hover {
   background: #001e80;
   color: #fff;
